syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "ito-deposit/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Admin {
	rpc PointInfo(PointInfoReq) returns (PointInfoRes) {
		option (google.api.http) = {
			post: "/point_info"
			body: "*"
		};
	};
	rpc PointList(PointListReq) returns (PointListRes) {
		option (google.api.http) = {
			get: "/point_list"
		};
	};
	rpc AdminLogin(AdminLoginReq) returns (AdminLoginRes) {
		option (google.api.http) = {
			post: "/admin/login"
			body: "*"
		};
	};

	rpc SetPriceRule(SetPriceRuleReq) returns (SetPriceRuleRes) {
		option (google.api.http) = {
			post: "/admin/setPriceRule"
			body: "*"
		};
	};

	rpc GetPriceRule(GetPriceRuleReq) returns (GetPriceRuleRes) {
		option (google.api.http) = {
			get: "/admin/getPriceRule"
		};
	};

	rpc UploadFile(UploadFileReq) returns (UploadFileRes) {
		option (google.api.http) = {
			get: "/admin/uploadFile"
		};
	};
}

message UploadFileReq{
	bytes file = 1;
	string fileName = 2;
	int64 fileSize = 3;
}

message UploadFileRes{
	string url = 1;
}
message AdminLoginReq {
	string mobile = 1;
	string password = 2;
	string smsCode = 3;
}
message AdminLoginRes {
	int64 code = 1;
	string msg = 2;
	int64 id = 3;
	string token = 4;
}
message SetPriceRuleReq {
	int64 network_id = 1;
	repeated LockerPriceRule rules = 2;
}

message SetPriceRuleRes {
	int32 code = 1;
	string msg = 2;
}

message GetPriceRuleReq {
	int64 network_id = 1;
}

message GetPriceRuleRes {
	repeated LockerPriceRule rules = 1;
}

message LockerPriceRule {
	// 基础标识
	int64 id = 1;                  // 规则ID（更新时使用）
	string rule_name = 2;           // 规则名称（可选）

	// 核心配置
	int32 fee_type = 3;            // 1-计时 2-按日
	int32 locker_type = 4;         // 1-小柜 2-大柜
	float free_duration = 5;       // 免费时长(小时)

	// 金额设置
	float hourly_rate = 6;         // 小时费率
	float daily_cap = 7;           // 24小时封顶
	float daily_rate = 8;          // 日费率
	float advance_amount = 9;      // 预付金额
	float deposit_amount = 10;     // 押金金额

	// 功能开关
	bool is_deposit_enabled = 11;
	bool is_advance_pay = 12;
}
message PointListReq {

}
message PointListRes {
	int64 code = 1;
	string msg = 2;
	repeated PointList list = 3;
}
message PointList{
	string name = 1;
	string address = 2;
	int64 available_large = 3;
	int64 available_medium = 4;
	int64 available_small = 5;
}
message PointInfoReq {
	int64 id = 1;
}
message PointInfoRes {
	int64 code = 1;
	string msg = 2;
	string name = 3;
	string address = 4;
	string point_type = 5;
	int64 available_large = 6;
	int64 available_medium = 7;
	int64 available_small = 8;
	string open_time = 9;
	string staus = 10;
	string point_image = 11;
}













