syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "ito-deposit/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service User {
	rpc Admin (AdminRequest) returns (AdminRes){
		option (google.api.http) = {
			post: "/admin"
			body: "*"
		};
	};
	rpc OrderList (OrderListRequest) returns (OrderListRes){
		option (google.api.http) = {
			get: "/list"
		};
	};
	rpc Login (LoginRequest) returns (LoginRes){
		option (google.api.http) = {
			post: "/login"
			body: "*"
		};
	};
	rpc Register (RegisterRequest) returns (RegisterRes){
		option (google.api.http) = {
			post: "/register"
			body: "*"
		};
	};
	rpc SendSms (SendSmsRequest) returns (SendSmsRes){
		option (google.api.http) = {
			post: "/sendSms"
			body: "*"
		};
	};

}



message SendSmsRequest {
	string mobile = 1 ;
	string source = 2;
}
message SendSmsRes {
	int64 code = 1;
	string msg = 2;
}
message RegisterRequest {
	string mobile = 1;
	string password = 2;
	string smsCode = 3;
	string username = 4;
}
message RegisterRes {
	int64 code = 1;
	string msg = 2;
}
message LoginRequest {
	string mobile = 1;
	string password = 2;
	string smsCode = 3;
	string username = 4;
}
message LoginRes {
	int64 code = 1;
	string msg = 2;
	int64 id = 3;
	string token = 4;
}
message OrderListRequest {

}
message OrderListRes {
	int64 code = 1;
	string msg = 2;
	repeated OrderList list = 3;
}
message OrderList{
	string OrderNumber = 1; // 业务订单号（唯一标识）
	int64 UserId = 2; // 用户ID（关联用户表）
	int64 ScheduledDuration = 3; // 计划寄存时长（小时）
	int64 ActualDuration = 4; // 实际寄存时长（小时）
	float Price = 5; // 基础费用
	float Discount = 6; // 优惠金额
	float AmountPaid = 7; // 实付金额
	string StorageLocationName = 8; // 寄存网点名称
	string CabinetId = 9; // 柜子ID
	int64 Status = 10; // 订单状态：1-待支付、2-寄存中、3-已完成、4-已取消、5-超时、6-异常
	int64 DepositStatus = 11; // 押金状态：1-已支付、2-已退还、3-已扣除
}
message AdminRequest {
	int64 admin_id = 1;
	int64 locker_point_id = 2;
}
message AdminRes {
	int64 code = 1;
	string msg = 2;
	int64 point_num = 3;
	int64 yesterday_order_num = 4;
	float last_order_price = 5;
	int64 last_order_num = 6;
	float mouth_price = 7;
	int64 month_num = 8;
}